[workspace]
resolver = "1"

members = [
    "day-01",
    "day-02",
    "day-03",
    "day-04",
    "day-05",
    "day-06",
    "day-07",
    "day-08",
    "day-09",
]

[workspace.dependencies]
regex = {version = "~1.10.2"}
itertools = {version = "~0.12.0"}
nom = {version = "~7.1.3"}
num =  {version = "~0.4.1"}
rayon = {version = "~1.8.0"}
