[package]
name = "day-13"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = {workspace = true, optional = true}
itertools = {workspace = true, optional = false}
nom = {workspace = true, optional = false}
num = {workspace = true, optional = false}
rayon = {workspace = true, optional = true}
ndarray = {workspace = true, optional = false}