[package]
name = "day-16"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = {workspace = true, optional = true}
itertools = {workspace = true, optional = false}
nom = {workspace = true, optional = false}
num = {workspace = true, optional = true}
rayon = {workspace = true, optional = false}
ndarray = {workspace = true, optional = true}
glam = {workspace = true, optional = false}